--- a/api/package.json
+++ b/api/package.json
@@ -3,9 +3,31 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "prisma:migration": "npx prisma migrate dev --name initial",
+    "prisma:generate": "npx prisma generate",
+    "prisma:migrate": "npm run prisma:migration && npm run prisma:generate",
+    "prisma:reset": "npx run prisma migrate reset",
+    "start:dev": "nodemon ./main.ts",
+    "seed:init": "npm run prisma:reset && ts-node ./src/seed/index.ts"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
+    "prisma": "^4.8.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "@prisma/client": "^4.8.1",
+    "@types/uuid": "^9.0.0",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
+  },
+  "prisma": {
+    "schema": "./src/services/db/schema.prisma"
   }
 }
